--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "author": "Adnan Rahić",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.18.1",
-    "express": "^4.16.4",
-    "next": "^7.0.2",
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "next": "^7.0.3",
     "path-match": "^1.2.4",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
     "serverless-apigw-binary": "^0.4.4",
-    "serverless-http": "^1.6.0",
-    "url": "^0.11.0",
-    "serverless-domain-manager": "^2.6.0"
+    "serverless-domain-manager": "^2.6.13",
+    "serverless-http": "^1.10.1",
+    "url": "^0.11.0"
   }
 }
