--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sample repo for setting up Next and React on AWS Lambda with the Serverless Framework.",
   "main": "index.js",
   "scripts": {
+    "dev": "next",
     "build": "next build",
     "deploy": "next build && sls deploy"
   },
