--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "next": "^7.0.3",
+    "next": "^9.5.3",
+    "next-images": "^1.7.0",
     "path-match": "^1.2.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
